itl-svc.yaml
kind: Service
apiVersion: v1
metadata: 
  name: itl-v1-svc
spec:
  selector:
    app: despliegue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
