ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.oascencio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itl-v1-svc
            port:
              number: 80
